Added connection of sidebar and backend. Added connection of fragment editor and backend. Fixed some bugs in backend. Added populate parameter to /scenario/id Fixed max-height of sidebar links
