# public_src/js/api.js
@@ -1,30 +1,23 @@
-var RestClient = require('node-rest-client').Client;
 var Config = require('./config')
 
 var API = function(host) {
     this.host = host;
-
-    this.client = RestClient;
-
-
-    //Fragment-Logic
-    this.client.registerMethod("getFragment", this.createURL("fragment/${id}"), "GET");
-    this.client.registerMethod("postFragment", this.createURL("fragment/${id}"), "POST");
-    this.client.registerMethod("searchFragment", this.createURL("fragment"), "GET");
-    this.client.registerMethod("createFragment", this.createURL("fragment"), "POST");
-    this.client.registerMethod("getFragmentXML", this.createURL("fragment/${id}/xml"), "GET");
-    this.client.registerMethod("getFragmentStructure", this.createURL("fragment/${id}/structure"), "GET");
 };
 
 API.prototype.createURL = function(endpoint) {
     return this.host.concat(endpoint);
 };
 
+API.prototype.getFragmentXML = function(id, callback) {
+    $.ajax({
+        url: this.createURL("fragment/" + id + "/xml"),
+        success: callback,
+        dataType: "text"
+    });
+};
+
 API.prototype.getFragment = function(id, callback) {
-    args = {
-        path: {id: id}
-    };
-    this.client.methods.getFragment(args, callback);
+    $.getJSON(this.createURL("fragment/" + id), callback);
 };
 
 API.prototype.postFragment = function(fragment, callback) {
@@ -35,5 +28,22 @@ API.prototype.postFragment = function(fragment, callback) {
     this.client.methods.postFragment(args, callback);
 };
 
-module.exports = {};
+API.prototype.getFullScenario = function(id, populate, callback) {
+    if (typeof callback === 'undefined') {
+        callback = populate;
+        populate = '0';
+    }
+    $.getJSON(this.createURL("scenario/" + id + "?populate=" + populate), callback);
+};
+
+API.prototype.getAllScenarios = function(callback, populate) {
+    $.getJSON(this.createURL("scenario"), callback);
+    //this.client.methods.getAllScenarios(callback);
+};
+
+API.prototype.exportFragment = function(fragment, callback) {
+    $.post(this.createURL("fragment/" + fragment._id),fragment,callback);
+};
+
+module.exports = new API(Config.API_HOST);
 //module.exports = new API(Config.API_HOST);
